# barkeeper

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
barkeeper/: Cargo.toml
barkeeper/benches/: kv_bench.rs
barkeeper/src/: config.rs
barkeeper/src/actors/: commands.rs
barkeeper/src/api/: gateway.rs  kv_service.rs  lease_service.rs  maintenance_service.rs  mod.rs  server.rs
barkeeper/src/auth/: actor.rs  manager.rs  mod.rs
barkeeper/src/cluster/: manager.rs  mod.rs  (+1 more)
barkeeper/tests/: auth_actor_test.rs  auth_test.rs  cluster_actor_test.rs  cluster_resilience_test.rs  cluster_test.rs  integration_test.rs  kube_apiserver_boot_test.rs  kube_apiserver_compat_test.rs  kv_store_actor_test.rs  kv_store_test.rs  lease_expiry_integration_test.rs  lease_expiry_test.rs  log_store_test.rs  rebar_raft_transport_test.rs  revision_assignment_test.rs  swim_discovery_test.rs  swim_membership_test.rs  txn_test.rs  txn_watch_test.rs  wal_lifetime_test.rs  watch_hub_actor_test.rs  watch_notify_test.rs  watch_revision_test.rs
bench/: docker-compose.barkeeper.yml  docker-compose.etcd.yml
bench/harness/: report.py  run.sh
bench/results/: .gitignore  RESULTS.md
benchmark/: RESULTS.md  compare.sh  run_barkeeper_benchmark.sh  run_etcd_benchmark.sh  run_perf_benchmark.sh
bkctl/: Cargo.toml  README.md  build.rs
bkctl/src/: app.rs  client.rs  event.rs  lib.rs  main.rs  ui.rs
bkctl/tests/: app_test.rs  client_test.rs  e2e_test.rs  ui_test.rs
docs/: architecture.md  deployment.md  developer-guide.md  etcd-compatibility.md  extending.md
docs/plans/: 2026-03-04-close-all-gaps-design.md  2026-03-04-close-all-gaps-plan.md  2026-03-04-rebar-integration-design.md  2026-03-04-rebar-integration-plan.md  2026-03-04-swim-cluster-implementation.md  2026-03-04-swim-cluster-integration-design.md  2026-03-05-inmemory-kv-and-batching-plan.md  2026-03-05-performance-optimization-design.md  2026-03-05-performance-optimization-plan.md  2026-03-05-wal-first-writes-design.md  2026-03-05-wal-first-writes-plan.md  2026-03-05-write-throughput-optimization.md  2026-03-06-bkctl-tui-design.md  2026-03-06-bkctl-tui-plan.md  2026-03-06-etcd-100-percent-compatibility-design.md  2026-03-06-etcd-100-percent-compatibility.md  2026-03-06-k3s-integration-test-design.md  2026-03-06-wal-lifetime-tests-design.md  2026-03-06-wal-lifetime-tests-plan.md
k8s-test/: README.md  barkeeper.yaml  k3s-integration.sh  results.md  run-tests.sh
proto/: LICENSE
proto/etcdserverpb/: rpc.proto
proto/raftpb/: raft_transport.proto
src/: config.rs  lib.rs  main.rs  tls.rs
src/actors/: commands.rs  mod.rs  raft_process.rs
src/api/: auth_service.rs  cluster_service.rs  gateway.rs  kv_service.rs  lease_service.rs  maintenance_service.rs  mod.rs  server.rs  watch_service.rs
src/auth/: actor.rs  interceptor.rs  manager.rs  mod.rs
src/cluster/: actor.rs  discovery.rs  manager.rs  mod.rs  swim_service.rs
src/kv/: actor.rs  apply_broker.rs  apply_notifier.rs  mod.rs  state_machine.rs  store.rs  write_buffer.rs
src/lease/: manager.rs
src/raft/: core.rs  grpc_transport.rs  log_store.rs  messages.rs  mod.rs  node.rs  snapshot.rs  transport.rs
src/watch/: actor.rs  hub.rs
tests/: apply_notifier_test.rs  auth_actor_test.rs  auth_test.rs  cluster_test.rs  compat_test.rs  integration_test.rs  k3s-integration.sh  kv_store_actor_test.rs  kv_store_test.rs  lease_expiry_integration_test.rs  log_store_test.rs  raft_election_test.rs  raft_types_test.rs  rebar_raft_transport_test.rs  registry_raft_test.rs  replication_test.rs  swim_discovery_test.rs  txn_test.rs  txn_watch_test.rs  watch_hub_actor_test.rs  watch_notify_test.rs  watch_revision_test.rs
(+51 files in other folders)
