[package]
name = "barkeeper"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "An etcd-compatible distributed KV store built on the Rebar actor runtime"

[dependencies]
# Actor runtime
rebar = { git = "https://github.com/alexandernicholson/rebar.git", branch = "main" }
rebar-core = { git = "https://github.com/alexandernicholson/rebar.git", branch = "main" }
rebar-cluster = { git = "https://github.com/alexandernicholson/rebar.git", branch = "main" }

# Storage
redb = "2"

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# HTTP gateway
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
rmpv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
bytes = "1"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.12"
