[package]
name = "barkeeper"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "An etcd-compatible distributed KV store built on the Rebar actor runtime"

[dependencies]
# Actor runtime
rebar = { git = "https://github.com/alexandernicholson/rebar.git", branch = "main" }
rebar-core = { git = "https://github.com/alexandernicholson/rebar.git", branch = "main" }
rebar-cluster = { git = "https://github.com/alexandernicholson/rebar.git", branch = "main" }

# Storage
dashmap = "6"
crc32fast = "1"

# gRPC
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
prost-types = "0.13"

# HTTP gateway
axum = "0.7"
http = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
rmpv = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
base64 = "0.22"

# CLI
clap = { version = "4", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"
async-stream = "0.3"

# Auth
bcrypt = "0.15"
jsonwebtoken = "9"

# TLS
rcgen = "0.13"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
time = "0.3"

# Utilities
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
bytes = "1"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
portpicker = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
tonic-build = "0.12"

[[bench]]
name = "kv_bench"
harness = false
